@@ -53,6 +53,26 @@ public class ZeroMqMessageHandlerSpec
 	}
 
 	/**
+	 * Create an instance based on the provided {@link ZContext}.
+	 * The created socket will be bound to a random port.
+	 * @param context the {@link ZContext} to use for creating sockets.
+	 * @since 6.4
+	 */
+	protected ZeroMqMessageHandlerSpec(ZContext context) {
+		this(context, SocketType.PAIR);
+	}
+
+	/**
+	 * Create an instance based on the provided {@link ZContext} and binding port.
+	 * @param context the {@link ZContext} to use for creating sockets.
+	 * @param port the port to bind ZeroMq socket to over TCP.
+	 * @since 6.4
+	 */
+	protected ZeroMqMessageHandlerSpec(ZContext context, int port) {
+		this(context, port, SocketType.PAIR);
+	}
+
+	/**
 	 * Create an instance based on the provided {@link ZContext} and connection string supplier.
 	 * @param context the {@link ZContext} to use for creating sockets.
 	 * @param connectUrl the supplier for URL to connect the socket to.
@@ -71,6 +91,30 @@ public class ZeroMqMessageHandlerSpec
 	 */
 	protected ZeroMqMessageHandlerSpec(ZContext context, String connectUrl, SocketType socketType) {
 		this(context, () -> connectUrl, socketType);
+	}
+
+	/**
+	 * Create an instance based on the provided {@link ZContext} and {@link SocketType}.
+	 * The created socket will be bound to a random port.
+	 * @param context the {@link ZContext} to use for creating sockets.
+	 * @param socketType the {@link SocketType} to use;
+	 *    only {@link SocketType#PAIR}, {@link SocketType#PUB} and {@link SocketType#PUSH} are supported.
+	 * @since 6.4
+	 */
+	protected ZeroMqMessageHandlerSpec(ZContext context, SocketType socketType) {
+		super(new ZeroMqMessageHandler(context, socketType));
+	}
+
+	/**
+	 * Create an instance based on the provided {@link ZContext}, binding port and {@link SocketType}.
+	 * @param context the {@link ZContext} to use for creating sockets.
+	 * @param port the port to bind ZeroMq socket to over TCP.
+	 * @param socketType the {@link SocketType} to use;
+	 *    only {@link SocketType#PAIR}, {@link SocketType#PUB} and {@link SocketType#PUSH} are supported.
+	 * @since 6.4
+	 */
+	protected ZeroMqMessageHandlerSpec(ZContext context, int port, SocketType socketType) {
+		super(new ZeroMqMessageHandler(context, port, socketType));
 	}
 
 	/**
