@@ -31,3 +31,8 @@ The references stay in cache because polling configuration does not allow to pro
 The `LobHandler` (and respective API) has been deprecated for removal in Spring Framework `6.2`.
 Respective option on `JdbcMessageStore` (and similar) have been deprecated as well.
 The byte array handling for serialized message is fully deferred to JDBC driver.
+
+[[x6.4-zeromq-changes]]
+=== ZeroMQ Changes
+
+The outbound component `ZeroMqMessageHandler` (and respective API) can now bind a TCP port instead of connecting to a given URL.
